Added TOC and some slides.

--- a/slides/index.html
+++ b/slides/index.html
@@ -19,14 +19,46 @@
 
       <section data-markdown data-state="bg-lavendar">
         <script type="text/template">
-            ## initial slide
+            # Introduction to NodeJS
 
-            A slide using markdown with a [link](http://google.com).
+            Aniket Suryavanshi [@44Sur](http://bit.ly/44Sur).
         </script>
       </section>
 
       <section data-state="bg-lavendar">
-        <h1>A regular slide</h1>
+        <h2>In this Presentation:</h2>
+        <ol>
+          <li>What is Node</li>
+          <li>What is Node Node Good For</li>
+          <li>What can be built with Node</li>
+          <li>Using Exress to create a simple app</li>
+          <li>Using Socket.io to create a chat app</li>
+          <li>Resources</li>
+        </ol>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>What is Node</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>What is Node Node Good For</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>What can be built with Node</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>Using Exress to create a simple app</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>Using Socket.io to create a chat app</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
+        <h2>Resources</h2>
       </section>
 
     <div>
