Content and markup for slides.

--- a/slides/index.html
+++ b/slides/index.html
@@ -19,9 +19,9 @@
 
       <section data-markdown data-state="bg-lavendar">
         <script type="text/template">
-            # Introduction to NodeJS
+          # Introduction to NodeJS
 
-            Aniket Suryavanshi [@44Sur](http://bit.ly/44Sur).
+          Aniket Suryavanshi [@44Sur](http://bit.ly/44Sur)
         </script>
       </section>
 
@@ -30,27 +30,46 @@
         <ol>
           <li>What is Node</li>
           <li>What is Node Node Good For</li>
-          <li>What can be built with Node</li>
-          <li>Using Exress to create a simple app</li>
+          <li>Useful Node Packages</li>
+          <li>Using Express to create a simple app</li>
           <li>Using Socket.io to create a chat app</li>
+          <li>Deploying a NodeJS app to Heroku</li>
           <li>Resources</li>
         </ol>
       </section>
 
       <section data-state="bg-lavendar">
         <h2>What is Node</h2>
+        <ul>
+          <li class="fragment roll-in">For backend development using JavaScript.</li>
+          <li class="fragment roll-in">Collection of libraries written in JavaScript, C and C++.</li>
+          <li class="fragment roll-in">Event-driven, non-blocking I/O model.</li>
+        </ul>
       </section>
 
-      <section data-state="bg-lavendar">
+      <section data-state="bg-lavendar" data-transition="zoom">
         <h2>What is Node Node Good For</h2>
+        <ul>
+          <li>Fast, scalable, data-intensive, realtime apps.</li>
+          <li>Chat apps, dashboards, etc.</li>
+          <li>Used by Linkedin.</li>
+        </ul>
       </section>
 
       <section data-state="bg-lavendar">
-        <h2>What can be built with Node</h2>
+        <h2>Useful Node Packages</h2>
+        <ul>
+          <li>Node Package Manager &dash; <strong>npm</strong></li>
+          <li>package.json</li>
+          <li>nodemon</li>
+          <li>zmq</li>
+          <li>express</li>
+          <li>socket</li>
+        </ul>
       </section>
 
       <section data-state="bg-lavendar">
-        <h2>Using Exress to create a simple app</h2>
+        <h2>Using Express to create a simple app</h2>
       </section>
 
       <section data-state="bg-lavendar">
@@ -58,7 +77,17 @@
       </section>
 
       <section data-state="bg-lavendar">
+        <h2>Deploying a NodeJS app to Heroku</h2>
+      </section>
+
+      <section data-state="bg-lavendar">
         <h2>Resources</h2>
+        <ul>
+          <li><a href="http://nodejs.org/" target="_blank">nodejs.org s</a></li>
+          <li><a href="http://nodeschool.io/" target="_blank">Nodeschool</a></li>
+          <li><a href="http://howtonode.org/" target="_blank">How to Node</a></li>
+          <li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js" target="_blank">Course: REAL-TIME WEB WITH NODE.JS (Paid)</a></li>
+        </ul>
       </section>
 
     <div>
@@ -70,6 +99,7 @@
   <script>
    Reveal.initialize({
     transition: 'linear',
+    progress: true,
     backgroundTransition: 'slide',
     dependencies: [
         // Cross-browser shim that fully implements classList - https://github.com/eligrey/classList.js/
