--- a/slides/index.html
+++ b/slides/index.html
@@ -31,7 +31,6 @@
           <li>What is Node</li>
           <li>What is Node Node Good For</li>
           <li>Useful Node Packages</li>
-          <li>Using Express to create a simple app</li>
           <li>Using Socket.io to create a chat app</li>
           <li>Deploying a NodeJS app to Heroku</li>
           <li>Resources</li>
@@ -51,8 +50,7 @@
         <h2>What is Node Node Good For</h2>
         <ul>
           <li>Fast, scalable, data-intensive, realtime apps.</li>
-          <li>Chat apps, dashboards, etc.</li>
-          <li>Used by Linkedin.</li>
+          <li>Chat apps, analytics, games, etc.</li>
         </ul>
       </section>
 
@@ -61,19 +59,20 @@
         <ul>
           <li>Node Package Manager &dash; <strong>npm</strong></li>
           <li>package.json</li>
+          <li>npm install</li>
           <li>nodemon</li>
-          <li>zmq</li>
-          <li>express</li>
+          <li><strong>zmq</strong>: pub-sub, pull-push, router-dealer</li>
+          <li><strong>express</strong>: WebApp framework</li>
           <li>socket</li>
         </ul>
       </section>
 
       <section data-state="bg-lavendar">
-        <h2>Using Express to create a simple app</h2>
-      </section>
-
-      <section data-state="bg-lavendar">
-        <h2>Using Socket.io to create a chat app</h2>
+        <h2>Create a chat app from scratch using socket.io</h2>
+        <ul>
+          <li><strong>WebSocket</strong>: full-duplex protocol</li>
+          <li>express</li>
+        </ul>
       </section>
 
       <section data-state="bg-lavendar">
@@ -87,6 +86,8 @@
           <li><a href="http://nodeschool.io/" target="_blank">Nodeschool</a></li>
           <li><a href="http://howtonode.org/" target="_blank">How to Node</a></li>
           <li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js" target="_blank">Course: REAL-TIME WEB WITH NODE.JS (Paid)</a></li>
+          <li><a href="https://pragprog.com/book/jwnode/node-js-the-right-way" target="_blank">NodeJS the Right Way (Book)</a></li>
+          <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#introduction" target="_blank">Deploying to Heroku</a></li>
         </ul>
       </section>
 
