--- a/slides/index.html
+++ b/slides/index.html
@@ -8,7 +8,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Introduction to NodeJS</title>
   <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
-  
+  <style type="text/css">
+    body { font-size: 25px; font-family: 'DIN Alternate' !important; }
+    h1, h2, h3, h4, h5, h6 { font-family: 'Marker Felt', cursive !important; margin-bottom: 3% !important; }
+    html.bg-lavendar .state-background { background-color: #534A5C; }
+    html.bg-blue .state-background { background-color: #334D5C; }
+    html.bg-green .state-background { background-color: #45B29D; }
+    html.bg-orange .state-background { background-color: #E27A3F; }
+    html.bg-red .state-background { background-color: #DF5A49; }
+    .reveal .progress { height: 7px; }
+    .progress span { background: rgba(0,0,0,0.5); }
+    .bg-lavendar body,
+    .bg-blue body,
+    .bg-green body,
+    .bg-red body,
+    .bg-orange body { color: #fff;}
+    .bg-green a { color: #334D5C; }
+    .bg-lavendar a,
+    .bg-blue a,
+    .bg-red a,
+    .bg-orange a { color: #EFC94C;}
+    .cover-slide { color: #fff; }
+    .cover-slide img { display: block; margin: auto; }
+  </style>
 </head>
 <body>
   <!--[if lt IE 7]>
@@ -17,27 +39,25 @@
   <div class="reveal">
     <div class="slides">
 
-      <section data-markdown data-state="bg-lavendar">
-        <script type="text/template">
-          # Introduction to NodeJS
-
-          Aniket Suryavanshi [@44Sur](http://bit.ly/44Sur)
-        </script>
+      <section data-background="#DF5A49" class="cover-slide">
+        <h1>Introduction to NodeJS</h1>
+        <img src="images/nodejs-logo.png" alt="NodeJS Logo" />
+        Aniket Suryavansi | <a href="http://bit.ly/44Sur" target="_blank">@44Sur</a>
       </section>
 
-      <section data-state="bg-lavendar">
-        <h2>In this Presentation:</h2>
+      <section data-state="bg-yellow">
+        <h2>In this Presentation</h2>
         <ol>
           <li>What is Node</li>
           <li>What is Node Node Good For</li>
           <li>Useful Node Packages</li>
-          <li>Using Socket.io to create a chat app</li>
+          <li>Chat app from scratch using socket.io</li>
           <li>Deploying a NodeJS app to Heroku</li>
           <li>Resources</li>
         </ol>
       </section>
 
-      <section data-state="bg-lavendar">
+      <section data-state="bg-blue">
         <h2>What is Node</h2>
         <ul>
           <li class="fragment roll-in">For backend development using JavaScript.</li>
@@ -46,15 +66,16 @@
         </ul>
       </section>
 
-      <section data-state="bg-lavendar" data-transition="zoom">
+      <section data-state="bg-green" data-transition="zoom">
         <h2>What is Node Node Good For</h2>
         <ul>
           <li>Fast, scalable, data-intensive, realtime apps.</li>
           <li>Chat apps, analytics, games, etc.</li>
+          <li><a href="http://nodejs.org/industry/" target="_blank">nodejs.org/industry</a></li>
         </ul>
       </section>
 
-      <section data-state="bg-lavendar">
+      <section data-state="bg-orange">
         <h2>Useful Node Packages</h2>
         <ul>
           <li>Node Package Manager &dash; <strong>npm</strong></li>
@@ -63,12 +84,12 @@
           <li>nodemon</li>
           <li><strong>zmq</strong>: pub-sub, pull-push, router-dealer</li>
           <li><strong>express</strong>: WebApp framework</li>
-          <li>socket</li>
+          <li>socket.io</li>
         </ul>
       </section>
 
-      <section data-state="bg-lavendar">
-        <h2>Create a chat app from scratch using socket.io</h2>
+      <section data-state="bg-red">
+        <h2>Chat app from scratch using socket.io</h2>
         <ul>
           <li><strong>WebSocket</strong>: full-duplex protocol</li>
           <li>express</li>
@@ -76,7 +97,9 @@
       </section>
 
       <section data-state="bg-lavendar">
-        <h2>Deploying a NodeJS app to Heroku</h2>
+        <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#introduction" target="_blank">
+          <h2>Deploying a NodeJS app to Heroku</h2>
+        </a>
       </section>
 
       <section data-state="bg-lavendar">
@@ -87,7 +110,6 @@
           <li><a href="http://howtonode.org/" target="_blank">How to Node</a></li>
           <li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js" target="_blank">Course: REAL-TIME WEB WITH NODE.JS (Paid)</a></li>
           <li><a href="https://pragprog.com/book/jwnode/node-js-the-right-way" target="_blank">NodeJS the Right Way (Book)</a></li>
-          <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#introduction" target="_blank">Deploying to Heroku</a></li>
         </ul>
       </section>
 
