--- a/slides/index.html
+++ b/slides/index.html
@@ -9,7 +9,7 @@
   <title>Introduction to NodeJS</title>
   <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.min.css">
   <style type="text/css">
-    body { font-size: 25px; font-family: 'DIN Alternate' !important; }
+    body { font-size: 30px; font-family: 'DIN Alternate' !important; }
     h1, h2, h3, h4, h5, h6 { font-family: 'Marker Felt', cursive !important; margin-bottom: 3% !important; }
     html.bg-lavendar .state-background { background-color: #534A5C; }
     html.bg-blue .state-background { background-color: #334D5C; }
@@ -23,11 +23,11 @@
     .bg-green body,
     .bg-red body,
     .bg-orange body { color: #fff;}
-    .bg-green a { color: #334D5C; }
+    .bg-green a,
+    .bg-orange a { color: #334D5C; }
     .bg-lavendar a,
     .bg-blue a,
-    .bg-red a,
-    .bg-orange a { color: #EFC94C;}
+    .bg-red a { color: #EFC94C;}
     .cover-slide { color: #fff; }
     .cover-slide img { display: block; margin: auto; }
   </style>
@@ -49,7 +49,7 @@
         <h2>In this Presentation</h2>
         <ol>
           <li>What is Node</li>
-          <li>What is Node Node Good For</li>
+          <li>What is Node Good For</li>
           <li>Useful Node Packages</li>
           <li>Chat app from scratch using socket.io</li>
           <li>Deploying a NodeJS app to Heroku</li>
@@ -67,7 +67,7 @@
       </section>
 
       <section data-state="bg-green" data-transition="zoom">
-        <h2>What is Node Node Good For</h2>
+        <h2>What is Node Good For</h2>
         <ul>
           <li>Fast, scalable, data-intensive, realtime apps.</li>
           <li>Chat apps, analytics, games, etc.</li>
@@ -83,7 +83,7 @@
           <li>npm install</li>
           <li>nodemon</li>
           <li><strong>zmq</strong>: pub-sub, pull-push, router-dealer</li>
-          <li><strong>express</strong>: WebApp framework</li>
+          <li><a href="http://expressjs.com/" target="_blank">express</a>: WebApp framework</li>
           <li>socket.io</li>
         </ul>
       </section>
@@ -99,16 +99,24 @@
       <section data-state="bg-lavendar">
         <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#introduction" target="_blank">
           <h2>Deploying a NodeJS app to Heroku</h2>
+          <ul>
+            <li>Install Heroku toolbelt.</li>
+            <li>heroku login</li>
+            <li>heroku create --http-git</li>
+            <li>git push heroku master</li>
+            <li>heroku open</li>
+            <li>Procfile</li>
+          </ul>
         </a>
       </section>
 
       <section data-state="bg-lavendar">
         <h2>Resources</h2>
         <ul>
-          <li><a href="http://nodejs.org/" target="_blank">nodejs.org s</a></li>
+          <li><a href="http://nodejs.org/" target="_blank">nodejs.org</a></li>
           <li><a href="http://nodeschool.io/" target="_blank">Nodeschool</a></li>
           <li><a href="http://howtonode.org/" target="_blank">How to Node</a></li>
-          <li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js" target="_blank">Course: REAL-TIME WEB WITH NODE.JS (Paid)</a></li>
+          <li><a href="https://www.codeschool.com/courses/real-time-web-with-node-js" target="_blank">REAL-TIME WEB WITH NODE.JS (Paid course)</a></li>
           <li><a href="https://pragprog.com/book/jwnode/node-js-the-right-way" target="_blank">NodeJS the Right Way (Book)</a></li>
         </ul>
       </section>
