--- a/slides/index.html
+++ b/slides/index.html
@@ -30,6 +30,7 @@
     .bg-red a { color: #EFC94C;}
     .cover-slide { color: #fff; }
     .cover-slide img { display: block; margin: auto; }
+    a { text-decoration: none; position: relative; }
   </style>
 </head>
 <body>
@@ -91,23 +92,29 @@
       <section data-state="bg-red">
         <h2>Chat app from scratch using socket.io</h2>
         <ul>
-          <li><strong>WebSocket</strong>: full-duplex protocol</li>
-          <li>express</li>
+          <li><strong>WebSocket</strong>: full-duplex protocol; event-based communication.</li>
+          <li><a href="http://nodejs.org/download/" target="_blank">Install NodeJS≤/a></li>
+          <li>npm install express --save</li>
+          <li>express simple-chat -c stylus</li>
+          <li>npm install</li>
+          <li>npm install socket.io --save</li>
+          <li>Create HTTP server</li>
+          <li>Require socket.io</li>
         </ul>
       </section>
 
       <section data-state="bg-lavendar">
         <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#introduction" target="_blank">
           <h2>Deploying a NodeJS app to Heroku</h2>
-          <ul>
-            <li>Install Heroku toolbelt.</li>
-            <li>heroku login</li>
-            <li>heroku create --http-git</li>
-            <li>git push heroku master</li>
-            <li>heroku open</li>
-            <li>Procfile</li>
-          </ul>
         </a>
+        <ul>
+          <li>Install Heroku toolbelt.</li>
+          <li>heroku login</li>
+          <li>heroku create --http-git</li>
+          <li>git push heroku master</li>
+          <li>heroku open</li>
+          <li>Procfile</li>
+        </ul>
       </section>
 
       <section data-state="bg-lavendar">
